media/ingress/media-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarr
  namespace: media
spec:
  rules:
  - host: sonarr.featnarf.com
    http:
      paths:
      - path: /
        backend:
          serviceName: sonarr-svc
          servicePort: 80
