media/ingress/media-radarr-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: radarr
  namespace: media
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 15m
spec:
  rules:
  - host: radarr.featnarf.com
    http:
      paths:
      - path: /
        backend:
          serviceName: radarr-svc
          servicePort: 80
