media/ingress/media-tdarr-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tdarr
  namespace: media
spec:
  rules:
  - host: tdarr.featnarf.com
    http:
      paths:
      - path: /
        backend:
          serviceName: tdarr-svc
          servicePort: 80
