media/ingress/ombi-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ombi
  namespace: media
spec:
  rules:
  - host: zombrequest.featnarf.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ombi-svc
          servicePort: 80
