media/ingress/tau-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: tau
  namespace: media
spec:
  rules:
  - host: tau.featnarf.com
    http:
      paths:
      - path: /
        backend:
          serviceName: tau-svc
          servicePort: 80
